update: address error report issues    - add descriptive text for footer links for all html pages    - add styling to the descriptive text so that it is not      visible    - change '&' to '&amp' in resume.html    - removed px units to 0 values in projects.css    - relocated selector 'p a:hover' to address error report issue

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -17,7 +17,7 @@ p {
 }
 
 .link-box:nth-of-type(2) img, .link-box:nth-of-type(3) img, .link-box:nth-of-type(4) img {
-  border-radius: 15px 15px 0px 0px;
+  border-radius: 15px 15px 0 0;
   margin-top: 2rem; 
   margin-left: 0.8125rem;
 } 
